--- a/Day 2.ipynb
+++ b/Day 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,352 +24,17 @@
     {
      "data": {
       "text/plain": [
-       "{'three': np.int64(281),\n",
-       " 'vision': np.int64(312),\n",
-       " 'india': np.int64(137),\n",
-       " 'three vision': np.int64(286),\n",
-       " 'vision india': np.int64(314),\n",
-       " 'three vision india': np.int64(287),\n",
-       " 'year': np.int64(333),\n",
-       " 'histori': np.int64(130),\n",
-       " 'peopl': np.int64(204),\n",
-       " 'world': np.int64(326),\n",
-       " 'come': np.int64(37),\n",
-       " 'invad': np.int64(145),\n",
-       " 'us': np.int64(305),\n",
-       " 'captur': np.int64(30),\n",
-       " 'land': np.int64(151),\n",
-       " 'conquer': np.int64(43),\n",
-       " 'mind': np.int64(171),\n",
-       " 'year histori': np.int64(336),\n",
-       " 'histori peopl': np.int64(131),\n",
-       " 'peopl world': np.int64(205),\n",
-       " 'world come': np.int64(327),\n",
-       " 'come invad': np.int64(38),\n",
-       " 'invad us': np.int64(146),\n",
-       " 'us captur': np.int64(306),\n",
-       " 'captur land': np.int64(31),\n",
-       " 'land conquer': np.int64(152),\n",
-       " 'conquer mind': np.int64(45),\n",
-       " 'year histori peopl': np.int64(337),\n",
-       " 'histori peopl world': np.int64(132),\n",
-       " 'peopl world come': np.int64(206),\n",
-       " 'world come invad': np.int64(328),\n",
-       " 'come invad us': np.int64(39),\n",
-       " 'invad us captur': np.int64(147),\n",
-       " 'us captur land': np.int64(307),\n",
-       " 'captur land conquer': np.int64(32),\n",
-       " 'land conquer mind': np.int64(153),\n",
-       " 'alexand': np.int64(3),\n",
-       " 'onward': np.int64(196),\n",
-       " 'greek': np.int64(122),\n",
-       " 'turk': np.int64(299),\n",
-       " 'mogul': np.int64(172),\n",
-       " 'portugues': np.int64(210),\n",
-       " 'british': np.int64(23),\n",
-       " 'french': np.int64(99),\n",
-       " 'dutch': np.int64(66),\n",
-       " 'came': np.int64(27),\n",
-       " 'loot': np.int64(159),\n",
-       " 'took': np.int64(292),\n",
-       " 'alexand onward': np.int64(4),\n",
-       " 'onward greek': np.int64(197),\n",
-       " 'greek turk': np.int64(123),\n",
-       " 'turk mogul': np.int64(300),\n",
-       " 'mogul portugues': np.int64(173),\n",
-       " 'portugues british': np.int64(211),\n",
-       " 'british french': np.int64(24),\n",
-       " 'french dutch': np.int64(100),\n",
-       " 'dutch came': np.int64(67),\n",
-       " 'came loot': np.int64(28),\n",
-       " 'loot us': np.int64(160),\n",
-       " 'us took': np.int64(308),\n",
-       " 'alexand onward greek': np.int64(5),\n",
-       " 'onward greek turk': np.int64(198),\n",
-       " 'greek turk mogul': np.int64(124),\n",
-       " 'turk mogul portugues': np.int64(301),\n",
-       " 'mogul portugues british': np.int64(174),\n",
-       " 'portugues british french': np.int64(212),\n",
-       " 'british french dutch': np.int64(25),\n",
-       " 'french dutch came': np.int64(101),\n",
-       " 'dutch came loot': np.int64(68),\n",
-       " 'came loot us': np.int64(29),\n",
-       " 'loot us took': np.int64(161),\n",
-       " 'yet': np.int64(338),\n",
-       " 'done': np.int64(59),\n",
-       " 'nation': np.int64(184),\n",
-       " 'yet done': np.int64(339),\n",
-       " 'done nation': np.int64(60),\n",
-       " 'yet done nation': np.int64(340),\n",
-       " 'anyon': np.int64(12),\n",
-       " 'conquer anyon': np.int64(44),\n",
-       " 'grab': np.int64(115),\n",
-       " 'cultur': np.int64(49),\n",
-       " 'tri': np.int64(296),\n",
-       " 'enforc': np.int64(71),\n",
-       " 'way': np.int64(320),\n",
-       " 'life': np.int64(158),\n",
-       " 'grab land': np.int64(116),\n",
-       " 'land cultur': np.int64(154),\n",
-       " 'cultur histori': np.int64(50),\n",
-       " 'histori tri': np.int64(133),\n",
-       " 'tri enforc': np.int64(297),\n",
-       " 'enforc way': np.int64(72),\n",
-       " 'way life': np.int64(321),\n",
-       " 'grab land cultur': np.int64(117),\n",
-       " 'land cultur histori': np.int64(155),\n",
-       " 'cultur histori tri': np.int64(51),\n",
-       " 'histori tri enforc': np.int64(134),\n",
-       " 'tri enforc way': np.int64(298),\n",
-       " 'enforc way life': np.int64(73),\n",
-       " 'respect': np.int64(235),\n",
-       " 'freedom': np.int64(94),\n",
-       " 'other': np.int64(201),\n",
-       " 'first': np.int64(81),\n",
-       " 'respect freedom': np.int64(236),\n",
-       " 'freedom other': np.int64(97),\n",
-       " 'other first': np.int64(202),\n",
-       " 'first vision': np.int64(82),\n",
-       " 'vision freedom': np.int64(313),\n",
-       " 'respect freedom other': np.int64(237),\n",
-       " 'freedom other first': np.int64(98),\n",
-       " 'other first vision': np.int64(203),\n",
-       " 'first vision freedom': np.int64(83),\n",
-       " 'believ': np.int64(15),\n",
-       " 'got': np.int64(112),\n",
-       " 'start': np.int64(265),\n",
-       " 'war': np.int64(318),\n",
-       " 'independ': np.int64(136),\n",
-       " 'believ india': np.int64(16),\n",
-       " 'india got': np.int64(139),\n",
-       " 'got first': np.int64(113),\n",
-       " 'vision start': np.int64(316),\n",
-       " 'start war': np.int64(266),\n",
-       " 'war independ': np.int64(319),\n",
-       " 'believ india got': np.int64(17),\n",
-       " 'india got first': np.int64(140),\n",
-       " 'got first vision': np.int64(114),\n",
-       " 'first vision start': np.int64(84),\n",
-       " 'vision start war': np.int64(317),\n",
-       " 'start war independ': np.int64(267),\n",
-       " 'must': np.int64(175),\n",
-       " 'protect': np.int64(225),\n",
-       " 'nurtur': np.int64(191),\n",
-       " 'build': np.int64(26),\n",
-       " 'freedom must': np.int64(95),\n",
-       " 'must protect': np.int64(178),\n",
-       " 'protect nurtur': np.int64(226),\n",
-       " 'nurtur build': np.int64(192),\n",
-       " 'freedom must protect': np.int64(96),\n",
-       " 'must protect nurtur': np.int64(179),\n",
-       " 'protect nurtur build': np.int64(227),\n",
-       " 'free': np.int64(91),\n",
-       " 'one': np.int64(193),\n",
-       " 'free one': np.int64(92),\n",
-       " 'one respect': np.int64(194),\n",
-       " 'respect us': np.int64(239),\n",
-       " 'free one respect': np.int64(93),\n",
-       " 'one respect us': np.int64(195),\n",
-       " 'second': np.int64(245),\n",
-       " 'develop': np.int64(53),\n",
-       " 'second vision': np.int64(246),\n",
-       " 'india develop': np.int64(138),\n",
-       " 'second vision india': np.int64(247),\n",
-       " 'vision india develop': np.int64(315),\n",
-       " 'fifti': np.int64(78),\n",
-       " 'fifti year': np.int64(79),\n",
-       " 'year develop': np.int64(334),\n",
-       " 'develop nation': np.int64(54),\n",
-       " 'fifti year develop': np.int64(80),\n",
-       " 'year develop nation': np.int64(335),\n",
-       " 'time': np.int64(288),\n",
-       " 'see': np.int64(248),\n",
-       " 'time see': np.int64(289),\n",
-       " 'see develop': np.int64(249),\n",
-       " 'time see develop': np.int64(290),\n",
-       " 'see develop nation': np.int64(250),\n",
-       " 'among': np.int64(9),\n",
-       " 'top': np.int64(293),\n",
-       " 'term': np.int64(277),\n",
-       " 'gdp': np.int64(102),\n",
-       " 'among top': np.int64(10),\n",
-       " 'top nation': np.int64(294),\n",
-       " 'nation world': np.int64(187),\n",
-       " 'world term': np.int64(331),\n",
-       " 'term gdp': np.int64(278),\n",
-       " 'among top nation': np.int64(11),\n",
-       " 'top nation world': np.int64(295),\n",
-       " 'nation world term': np.int64(188),\n",
-       " 'world term gdp': np.int64(332),\n",
-       " 'percent': np.int64(207),\n",
-       " 'growth': np.int64(125),\n",
-       " 'rate': np.int64(228),\n",
-       " 'area': np.int64(13),\n",
-       " 'percent growth': np.int64(208),\n",
-       " 'growth rate': np.int64(126),\n",
-       " 'rate area': np.int64(229),\n",
-       " 'percent growth rate': np.int64(209),\n",
-       " 'growth rate area': np.int64(127),\n",
-       " 'poverti': np.int64(213),\n",
-       " 'level': np.int64(156),\n",
-       " 'fall': np.int64(74),\n",
-       " 'poverti level': np.int64(214),\n",
-       " 'level fall': np.int64(157),\n",
-       " 'poverti level fall': np.int64(215),\n",
-       " 'achiev': np.int64(0),\n",
-       " 'global': np.int64(103),\n",
-       " 'recognis': np.int64(230),\n",
-       " 'today': np.int64(291),\n",
-       " 'achiev global': np.int64(1),\n",
-       " 'global recognis': np.int64(104),\n",
-       " 'recognis today': np.int64(231),\n",
-       " 'achiev global recognis': np.int64(2),\n",
-       " 'global recognis today': np.int64(105),\n",
-       " 'lack': np.int64(148),\n",
-       " 'self': np.int64(253),\n",
-       " 'confid': np.int64(40),\n",
-       " 'reliant': np.int64(232),\n",
-       " 'assur': np.int64(14),\n",
-       " 'yet lack': np.int64(341),\n",
-       " 'lack self': np.int64(149),\n",
-       " 'self confid': np.int64(255),\n",
-       " 'confid see': np.int64(41),\n",
-       " 'nation self': np.int64(185),\n",
-       " 'self reliant': np.int64(257),\n",
-       " 'reliant self': np.int64(233),\n",
-       " 'self assur': np.int64(254),\n",
-       " 'yet lack self': np.int64(342),\n",
-       " 'lack self confid': np.int64(150),\n",
-       " 'self confid see': np.int64(256),\n",
-       " 'confid see develop': np.int64(42),\n",
-       " 'develop nation self': np.int64(55),\n",
-       " 'nation self reliant': np.int64(186),\n",
-       " 'self reliant self': np.int64(258),\n",
-       " 'reliant self assur': np.int64(234),\n",
-       " 'incorrect': np.int64(135),\n",
-       " 'third': np.int64(279),\n",
-       " 'third vision': np.int64(280),\n",
-       " 'stand': np.int64(262),\n",
-       " 'india must': np.int64(141),\n",
-       " 'must stand': np.int64(180),\n",
-       " 'stand world': np.int64(263),\n",
-       " 'india must stand': np.int64(142),\n",
-       " 'must stand world': np.int64(181),\n",
-       " 'unless': np.int64(302),\n",
-       " 'believ unless': np.int64(18),\n",
-       " 'unless india': np.int64(303),\n",
-       " 'india stand': np.int64(143),\n",
-       " 'world one': np.int64(329),\n",
-       " 'believ unless india': np.int64(19),\n",
-       " 'unless india stand': np.int64(304),\n",
-       " 'india stand world': np.int64(144),\n",
-       " 'stand world one': np.int64(264),\n",
-       " 'world one respect': np.int64(330),\n",
-       " 'strength': np.int64(268),\n",
-       " 'strength respect': np.int64(269),\n",
-       " 'respect strength': np.int64(238),\n",
-       " 'strength respect strength': np.int64(270),\n",
-       " 'strong': np.int64(271),\n",
-       " 'militari': np.int64(168),\n",
-       " 'power': np.int64(216),\n",
-       " 'also': np.int64(6),\n",
-       " 'econom': np.int64(69),\n",
-       " 'must strong': np.int64(182),\n",
-       " 'strong militari': np.int64(272),\n",
-       " 'militari power': np.int64(169),\n",
-       " 'power also': np.int64(217),\n",
-       " 'also econom': np.int64(7),\n",
-       " 'econom power': np.int64(70),\n",
-       " 'must strong militari': np.int64(183),\n",
-       " 'strong militari power': np.int64(273),\n",
-       " 'militari power also': np.int64(170),\n",
-       " 'power also econom': np.int64(218),\n",
-       " 'also econom power': np.int64(8),\n",
-       " 'go': np.int64(106),\n",
-       " 'hand': np.int64(128),\n",
-       " 'must go': np.int64(176),\n",
-       " 'go hand': np.int64(107),\n",
-       " 'hand hand': np.int64(129),\n",
-       " 'must go hand': np.int64(177),\n",
-       " 'go hand hand': np.int64(108),\n",
-       " 'good': np.int64(109),\n",
-       " 'fortun': np.int64(85),\n",
-       " 'work': np.int64(322),\n",
-       " 'great': np.int64(118),\n",
-       " 'good fortun': np.int64(110),\n",
-       " 'fortun work': np.int64(86),\n",
-       " 'work three': np.int64(323),\n",
-       " 'three great': np.int64(284),\n",
-       " 'great mind': np.int64(119),\n",
-       " 'good fortun work': np.int64(111),\n",
-       " 'fortun work three': np.int64(87),\n",
-       " 'work three great': np.int64(325),\n",
-       " 'three great mind': np.int64(285),\n",
-       " 'dr': np.int64(61),\n",
-       " 'vikram': np.int64(309),\n",
-       " 'sarabhai': np.int64(240),\n",
-       " 'dept': np.int64(52),\n",
-       " 'dr vikram': np.int64(64),\n",
-       " 'vikram sarabhai': np.int64(310),\n",
-       " 'sarabhai dept': np.int64(241),\n",
-       " 'dr vikram sarabhai': np.int64(65),\n",
-       " 'vikram sarabhai dept': np.int64(311),\n",
-       " 'space': np.int64(259),\n",
-       " 'professor': np.int64(222),\n",
-       " 'satish': np.int64(242),\n",
-       " 'dhawan': np.int64(56),\n",
-       " 'succeed': np.int64(274),\n",
-       " 'brahm': np.int64(20),\n",
-       " 'prakash': np.int64(219),\n",
-       " 'father': np.int64(75),\n",
-       " 'nuclear': np.int64(189),\n",
-       " 'materi': np.int64(165),\n",
-       " 'space professor': np.int64(260),\n",
-       " 'professor satish': np.int64(223),\n",
-       " 'satish dhawan': np.int64(243),\n",
-       " 'dhawan succeed': np.int64(57),\n",
-       " 'succeed dr': np.int64(275),\n",
-       " 'dr brahm': np.int64(62),\n",
-       " 'brahm prakash': np.int64(21),\n",
-       " 'prakash father': np.int64(220),\n",
-       " 'father nuclear': np.int64(76),\n",
-       " 'nuclear materi': np.int64(190),\n",
-       " 'space professor satish': np.int64(261),\n",
-       " 'professor satish dhawan': np.int64(224),\n",
-       " 'satish dhawan succeed': np.int64(244),\n",
-       " 'dhawan succeed dr': np.int64(58),\n",
-       " 'succeed dr brahm': np.int64(276),\n",
-       " 'dr brahm prakash': np.int64(63),\n",
-       " 'brahm prakash father': np.int64(22),\n",
-       " 'prakash father nuclear': np.int64(221),\n",
-       " 'father nuclear materi': np.int64(77),\n",
-       " 'lucki': np.int64(162),\n",
-       " 'close': np.int64(34),\n",
-       " 'consid': np.int64(46),\n",
-       " 'opportun': np.int64(199),\n",
-       " 'lucki work': np.int64(163),\n",
-       " 'three close': np.int64(282),\n",
-       " 'close consid': np.int64(35),\n",
-       " 'consid great': np.int64(47),\n",
-       " 'great opportun': np.int64(120),\n",
-       " 'opportun life': np.int64(200),\n",
-       " 'lucki work three': np.int64(164),\n",
-       " 'work three close': np.int64(324),\n",
-       " 'three close consid': np.int64(283),\n",
-       " 'close consid great': np.int64(36),\n",
-       " 'consid great opportun': np.int64(48),\n",
-       " 'great opportun life': np.int64(121),\n",
-       " 'four': np.int64(88),\n",
-       " 'mileston': np.int64(166),\n",
-       " 'career': np.int64(33),\n",
-       " 'see four': np.int64(251),\n",
-       " 'four mileston': np.int64(89),\n",
-       " 'mileston career': np.int64(167),\n",
-       " 'see four mileston': np.int64(252),\n",
-       " 'four mileston career': np.int64(90)}"
+       "{'good': np.int64(5),\n",
+       " 'boy': np.int64(0),\n",
+       " 'good boy': np.int64(6),\n",
+       " 'girl': np.int64(3),\n",
+       " 'good girl': np.int64(7),\n",
+       " 'boy girl': np.int64(1),\n",
+       " 'girl good': np.int64(4),\n",
+       " 'boy girl good': np.int64(2)}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,8 +72,8 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "ps = PorterStemmer()\n",
     "wordnet=WordNetLemmatizer()\n",
-    "sentences = nltk.sent_tokenize(paragraph)\n",
-    "#sentences = ['he is a good boy','she is a good girl','boy & girl are good']\n",
+    "#sentences = nltk.sent_tokenize(paragraph)\n",
+    "sentences = ['he is a good boy','she is a good girl','boy & girl are good']\n",
     "corpus = []\n",
     "for i in range(len(sentences)):\n",
     "    review = re.sub('[^a-zA-Z]', ' ', sentences[i])\n",
